--- a/JupiterGlossary/Glossary/2 For.mediawiki
+++ b/JupiterGlossary/Glossary/2 For.mediawiki
@@ -1,7 +1,7 @@
 __NOTOC__
 
 ===2 For===
-A type of price point in which two identical products are sold at a specified price. Not to be confused with [[BOGO]].
+A type of price point in which two identical products are sold at a specified price. Not to be confused with [[BOGO|BOGO.mediawiki]].
 
 =====Tooltip=====
 Select "2 For" when the promotion features two products at a special price (i.e. 2 Egg McMuffin sandwiches for $3.33).
