--- a/JupiterGlossary/glossary.mediawiki
+++ b/JupiterGlossary/glossary.mediawiki
@@ -7,41 +7,41 @@ A type of price point in which two identical products are sold at a specified pr
 '''3rd Party Coupon'''<br>
 A coupon distributed via a tie-in partner.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
-'''30s'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|30s]]'''<br>
 A 30-second TV commercial.
 
 ----
 '''AACM'''<br>
 African American Consumer Market. Consumer group that includes the consumers of African-American ethnicity.
 <br>
-See also: Consumer Segment. 
+See also: [[/JupiterGlossary/Glossary/Consumer Segment.mediawiki|Consumer Segment]]. 
 
 ----
 '''ACM'''<br>
 Asian Consumer Market. Consumer segment that includes the consumers of Asian-American ethnicity.
 <br>
-See also: Consumer Segment.
+See also: [[/JupiterGlossary/Glossary/Consumer Segment.mediawiki|Consumer Segment]].
 
 ----
-'''Activity Picture'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Activity Picture]]'''<br>
 Image representing the promotional activity.
 
 ----
-'''Activity Type'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Activity Type]]'''<br>
 Type of promotion offered by the competitor.
 
 ----
-'''Average Price (Indicator Type)'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Average Price (Indicator Type)]]'''<br>
 An indicator of the average price of specified products in specified geography and restaurant types. 
 
 ----
 '''Be Our Guest'''<br>
 A coupon distributed at events.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
 '''[[/JupiterGlossary/Glossary/BOGO.mediawiki|BOGO]]'''<br>
@@ -51,232 +51,232 @@ Buy one, get one free. A type of price point in which a consumer buys one produc
 '''Bounceback'''<br>
 A coupon offered at the time of purchase that gives customers a discount on a future purchase.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
-'''Bundled Price'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Bundled Price]]'''<br>
 A type of price point in which several different products are sold together at a discounted price. 
 
 ----
-'''Buy and Get a Discount'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Buy and Get a Discount]]'''<br>
 A type of price point in which a consumer purchases a product and gets a different product at a discounted price. 
 
 ----
-'''Buy and Get Free'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Buy and Get Free]]'''<br>
 A type of price point in which a consumer purchases a product and gets a different product for free.
 
 ----
-'''C-Rate'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|C-Rate]]'''<br>
 Local market contribution rate to OPNAD.
 
 ----
-'''Competitive Activity'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Competitive Activity]]'''<br>
 A promotion offered by a competitor.
 
 ----
-'''Competitor Logo'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Competitor Logo]]'''<br>
 Logo of the competitor.
 
 ----
-'''Consumer Segment'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Consumer Segment]]'''<br>
 A group of consumers created based on ethnicity.
 
 ----
-'''Coupon Expiration Date'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Coupon Expiration Date]]'''<br>
 Date when the validity of a coupon ends.
 
 ----
-'''Coupon Type'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Coupon Type]]'''<br>
 Type of coupon distributed to support a promotion.
 
 ----
-'''Data Entry Report'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Data Entry Report]]'''<br>
 A report containing the percentage of stores that reported promotions and/or the percentage of stores that reported promotions supported by TV for a specified time period and Division.
 
 ----
-'''Daypart'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Daypart]]'''<br>
 A division of the day defined by the type of meal usually served during a particular time interval.
 
 ----
-'''Day Specific'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Day Specific]]'''<br>
 A promotion or event that is offered only on certain days.
 
 ----
-'''Detailed Promotion Name'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Detailed Promotion Name]]'''<br>
 Descriptive name for the promotion.
 
 ----
 '''Digital Coupon'''<br>
 A coupon distributed to the consumer digitally, i.e. a digital banner ad.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
-'''Direct Mail'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Direct Mail]]'''<br>
 A coupon distributed via direct mail.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
-'''Discounted Price'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Discounted Price]]'''<br>
 A type of price point in which a product is sold at a specific short-term discounted price.
 
 ----
 '''Division'''<br>
-See Zone.
+See [[/JupiterGlossary/Glossary/Zone.mediawiki|Zone]].
 
 ----
 '''Door Hanger'''<br>
 A coupon distributed directly to the consumer's home via door hangers.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
-'''Drop Quantity'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Drop Quantity]]'''<br>
 Number of coupons to be distributed for the promotion.
 
 ----
-'''Drop Start Date'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Drop Start Date]]'''<br>
 Date when the distribution of a coupon begins.
 
 ----
 '''E-coupon'''<br>
 A coupon distributed via email.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
-'''EID'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|EID]]'''<br>
 Electronic identification number required to access Jupiter.
 
 ----
-'''End Date'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|End Date]]'''<br>
 Date when a promotion, or the media support for a promotion ends.
 
 ----
-'''Field Vote Date'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Field Vote Date]]'''<br>
 The date when a promotion saved as pending will be approved.
 
 ----
-'''Flag'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Flag]]'''<br>
 An icon that indicates whether a product has a certain property.
 
 ----
-'''Free Item'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Free Item]]'''<br>
 A type of price point in which customers get a free product, no purchase required.
 
 ----
 '''Frequency Card'''<br>
 A coupon with which customers receive a free product after purchasing a certain number of products.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
 '''FSI'''<br>
 Free standing insert. A coupon distributed via newspaper inserts.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
-'''Full Detailed Report'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Full Detailed Report]]'''<br>
 A detailed, fully customizable report with information regarding Jupiter entries.
 
 ----
 '''GCM'''<br>
 General Consumer Market. Consumer segment that includes consumers of all ethnicities.
 <br>
-See also: Consumer Segment. 
+See also: [[/JupiterGlossary/Glossary/Consumer Segment.mediawiki|Consumer Segment]]. 
 
 ----
-'''Geography'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Geography]]'''<br>
 Area covered by a promotional activity or indicator.
 
 ----
-'''GRP'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|GRP]]'''<br>
 Gross rating point. An advertising indicator used to measure the total exposures produced by a media campaign.
 
 ----
-'''Guest Counts (Indicator Type)'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Guest Counts (Indicator Type)]]'''<br>
 The number of customers in specified geography and restaurant types.
 
 ----
 '''HCM'''<br>
 Hispanic Consumer Market. Consumer segment that includes the consumers of Hispanic-American ethnicity.
 <br>
-See also: Consumer Segment. 
+See also: [[/JupiterGlossary/Glossary/Consumer Segment.mediawiki|Consumer Segment]]. 
 
 ----
-'''Indicator Type'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Indicator Type]]'''<br>
 Data measured by an indicator.
 
 ----
-'''Limited Time Only'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Limited Time Only]]'''<br>
 A product that is available only for a limited period of time.
 
 ----
-'''Local Support of OPNAD'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Local Support of OPNAD]]'''<br>
 Media support is the local support for an OPNAD promotion taking place during the same time period. Abbreviated as LSOP.
 
 ----
-'''Market'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Market]]'''<br>
 The lowest level in the three-level geographic organization of the US, representing an area covered by the same group of TV stations (typically a metropolitan area). A Market is part of a Region.
 
 ----
-'''Marketing (GRPs) (Indicator Type)'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Marketing (GRPs) (Indicator Type)]]'''<br>
 An indicator of the number of gross rating points (GRPs) running for specified products and media vehicles in specified geography and restaurant types. 
 
 ----
 '''McDApp Offer'''<br>
 A coupon distributed via the McD App smartphone applications.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
-'''Media Calendar Category'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Media Calendar Category]]'''<br>
 A group of products created from a media/advertising perspective.
 
 ----
-'''Media Reach Goal'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Media Reach Goal]]'''<br>
 An indicator of the targeted audience size for a promotion.
 
 ----
-'''Media Vehicle'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Media Vehicle]]'''<br>
 Type of mass media used to support the promotion.
 
 ----
 '''Mobile Coupon'''<br>
 A coupon distributed to the consumer via mobile phone.
 <br>
-See also: Coupon Type.
+See also: [[/JupiterGlossary/Glossary/Coupon Type.mediawiki|Coupon Type]].
 
 ----
-'''My Defaults'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|My Defaults]]'''<br>
 A default selection of options that a user can customize and use when creating indicators.
 
 ----
-'''No Price'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|No Price]]'''<br>
 A type of price point in which a product is advertised without an offer of any kind.
 
 ----
-'''Observed In'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Observed In]]'''<br>
 Areas where a competitive activity has been observed.
 
 ----
-'''One-Day Event'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|One-Day Event]]'''<br>
 A promotional event that takes place over a single day.
 
 ----
 '''OOH'''<br>
 Out-of-home advertising. A type of media vehicle that includes all forms of advertising that reach the consumer outside the home.
 <br>
-See also: Media Vehicle.
+See also: [[/JupiterGlossary/Glossary/Media Vehicle.mediawiki|Media Vehicle]].
 
 ----
-'''OPNAD'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|OPNAD]]'''<br>
 Operator's National Advertising Fund. A fund set up by McDonald's and Owner/Operators to purchase national television advertising.
 
 ----
-'''Other (Price Point Type)'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Other (Price Point Type)]]'''<br>
 A type of price point used to promote non-food products or brand messages.
 
 ----
@@ -284,77 +284,77 @@ A type of price point used to promote non-food products or brand messages.
 Point of purchase. The place where a transaction is completed, i.e. the restaurant.
 
 ----
-'''Price Point Type'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Price Point Type]]'''<br>
 Type of price offer used for the promotion.
 
 ----
-'''Product Category'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Product Category]]'''<br>
 A group of similar products.
 
 ----
-'''Promotion Support'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Promotion Support]]'''<br>
 Marketing activities that support a promotion.
 
 ----
-'''Region'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Region]]'''<br>
 The second level in the three-level geographic organization of the US. A Region is part of a Zone, and contains several Markets.
 
 ----
-'''Regular Advertised Price'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Regular Advertised Price]]'''<br>
 A type of price point that represents a standard, long-term pricing strategy.
 
 ----
 '''ROD'''<br>
 Rest of day. Products sold outside breakfast hours.
 <br>
-See also: Media Calendar Category.
+See also: [[/JupiterGlossary/Glossary/Media Calendar Category.mediawiki|Media Calendar Category]].
 
 ----
 '''ROP'''<br>
 Restaurant Order Proposal. An automated ordering system at the restaurant level.
 
 ----
-'''Sales (Indicator Type)'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Sales (Indicator Type)]]'''<br>
 The sum of receipts from specified restaurant types and geography.
 
 ----
-'''Short Promotion Name'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Short Promotion Name]]'''<br>
 Short name for the promotion.
 
 ----
-'''Store Group'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Store Group]]'''<br>
 A grouping of restaurants created based on the type of facility in which restaurants operate.
 
 ----
-'''System Goal'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|System Goal]]'''<br>
 The Jupiter-targeted media calendar category mix, as percentage of total GRPs to allocate to each media calendar category. 
 
 ----
-'''Start Date'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Start Date]]'''<br>
 Date when a promotion, or the media support for a promotion begins.
 
 ----
-'''Target Audience'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Target Audience]]'''<br>
 Age group targeted by the media support of a promotion. 
 
 ----
-'''Teaser'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Teaser]]'''<br>
 Media support that begins before the start date of the promotion.
 
 ----
-'''Test Product'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Test Product]]'''<br>
 A not yet launched product that a competitor is testing.
 
 ----
-'''Time Specific'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Time Specific]]'''<br>
 A promotion that is offered only at certain times.
 
 ----
-'''Timeliness Status'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Timeliness Status]]'''<br>
 Jupiter calculation indicating the percentage of promotions approved at least 30 days in advance of the promotion start date.
 
 ----
-'''Top 30 Report'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Top 30 Report]]'''<br>
 A report that provides GRP details for specified Media Calendar Categories and for specified geography.
 
 ----
@@ -362,15 +362,15 @@ A report that provides GRP details for specified Media Calendar Categories and f
 A promotion created on the Calendar page of Jupiter Marketing (Add Media Event).
 
 ----
-'''TV Activity Report Summary'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|TV Activity Report Summary]]'''<br>
 A report that provides the percentage of stores that support specified product categories or products with television during specified months.
 
 ----
-'''Units Per Thousand (UPTs) (Indicator Type)'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Units Per Thousand (UPTs) (Indicator Type)]]'''<br>
 An indicator of the number of specified products sold per 1,000 customers in specified geography and restaurant types.
 
 ----
-'''Units Sold (Indicator Type)'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Units Sold (Indicator Type)]]'''<br>
 The number of items of specified products sold in specified geography and restaurant types. 
 
 ----
@@ -378,17 +378,17 @@ The number of items of specified products sold in specified geography and restau
 A promotional activity that will take place in the near future, and for which the start date is unknown.
 
 ----
-'''Vehicle Report'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Vehicle Report]]'''<br>
 A report that provides for each media vehicle type the percentage and the number of stores that support specified product categories or products during a specified time period using a specified media vehicle.
 
 ----
-'''YAG'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|YAG]]'''<br>
 Year ago. Used to compare local media mix calendar data with the same period from the previous year.
 
 ----
-'''YTD'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|YTD]]'''<br>
 Year-to-Date. The period of time between the beginning of the current year and the present date.
 
 ----
-'''Zone'''<br>
+'''[[/JupiterGlossary/Glossary/.mediawiki|Zone]]'''<br>
 The top level in the 3-level geographic organization of the US. A zone contains several Regions.
