--- a/team.mediawiki
+++ b/team.mediawiki
@@ -13,7 +13,7 @@
 | colspan="6"  style="background-color:#e0f0ff;border:0.05pt solid #dddddd;padding-top:0.185cm;padding-bottom:0.185cm;padding-left:0.265cm;padding-right:0.265cm;"| <center>'''CEO'''</center>
 
 |-
-| [[Image:Mike.png]]
+| [[File:Mike.png]]
 | <center>Michael Koch</center>
 
 <center><br>[mailto:michael.koch@kalon.ro michael.koch@kalon.ro]<br>+1-917-566-0450</center>
@@ -26,7 +26,7 @@
 | colspan="6"  style="background-color:#e0f0ff;border:0.05pt solid #dddddd;padding-top:0.185cm;padding-bottom:0.185cm;padding-left:0.265cm;padding-right:0.265cm;"| <center>'''Program Management'''</center>
 
 |-
-| [Image:Alex-S.png]
+| [[File:Alex-S.png]]
 | <center>Alexandru Simion</center>
 
 <center><br>[mailto:alexandru.simion@kalon.ro alexandru.simion@kalon.ro]<br>0742.479.520</center>
@@ -36,7 +36,7 @@
 | <center>12 Mar 2014</center>
 
 |-
-| [[Image:eugen%20Baicea.jpg]]
+| [[File:eugen%20Baicea.jpg]]
 | <center>Eugen Baicea</center>
 
 <center><br>[mailto:eugen.baicea@kalon.ro eugen.baicea@kalon.ro]<br>0727.811.761</center>
@@ -49,7 +49,7 @@
 
 
 |-
-| [[Image:marina.jpg]]
+| [[File:marina.jpg]]
 | <center>Marina Balan</center>
 
 <center><br>[mailto:marina.balan@kalon.ro marina.balan@kalon.ro]<br>0725.328.758</center>
@@ -59,7 +59,7 @@
 | <center>02 Dec 2014</center>
 
 |-
-| [[Image:razvan%20dica.jpg]]
+| [[File:razvan%20dica.jpg]]
 | <center>Razvan Dica</center>
 
 <center><br>[mailto:razvan.dica@kalon.ro razvan.dica@kalon.ro]<br>0734.319.008</center>
@@ -72,7 +72,7 @@
 | colspan="6"  style="background-color:#e0f0ff;border:0.05pt solid #dddddd;padding-top:0.185cm;padding-bottom:0.185cm;padding-left:0.265cm;padding-right:0.265cm;"| <center>'''Backend Development'''</center>
 
 |-
-| [[Image:Adrian-Punga.png]]
+| [[File:Adrian-Punga.png]]
 | <center>Adrian Punga</center>
 
 <center><br>[mailto:adrian.punga@kalon.ro adrian.punga@kalon.ro]<br>0724.058.582</center>
@@ -85,7 +85,7 @@
 | <center>20 Jan 2014</center>
 
 |-
-| [[Image:Silviu-C.png]]
+| [[File:Silviu-C.png]]
 | <center>Silviu Corhan</center>
 
 <center><br>[mailto:silviu.corhan@kalon.ro silviu.corhan@kalon.ro]<br>0722.565.894</center>
@@ -95,7 +95,7 @@
 | <center>07 Apr 2014</center>
 
 |-
-| [[Image:Alin-A.png]]
+| [[File:Alin-A.png]]
 | <center>Alin Alexa</center>
 
 <center><br>[mailto:alin.alexa@kalon.ro alin.alexa@kalon.ro]<br>0734.355.173</center>
@@ -105,7 +105,7 @@
 | <center>05 May 2014</center>
 
 |-
-| [[Image:Dragos.png]]
+| [[File:Dragos.png]]
 | <center>Dragos Bulugean</center>
 
 <center><br>[mailto:dragos.bulugean@kalon.ro dragos.bulugean@kalon.ro]<br>0767.816.758</center>
@@ -115,7 +115,7 @@
 | <center>12 May 2014</center>
 
 |-
-| [[Image:Bogdan-Z.png]]
+| [[File:Bogdan-Z.png]]
 | <center>Bogdan Zaharia</center>
 
 <center><br>[mailto:bogdan.zaharia@kalon.ro bogdan.zaharia@kalon.ro]<br>0727 723 558</center>
@@ -125,7 +125,7 @@
 | <center>12 May 2014</center>
 
 |-
-| [[Image:Marian.png]]
+| [[File:Marian.png]]
 | <center>Marian Danscoi</center>
 
 <center><br>[mailto:marian.danscoi@kalon.ro marian.danscoi@kalon.ro]<br>0752.177.783</center>
@@ -141,7 +141,7 @@
 | <center>23 Jun 2014</center>
 
 |-
-| [[Image:Liviu.png]]
+| [[File:Liviu.png]]
 | <center>Liviu Danicel</center>
 
 <center><br>[mailto:liviu.danicel@kalon.ro liviu.danicel@kalon.ro]<br>0723 147 722</center>
@@ -154,7 +154,7 @@
 | <center>14 Jul 2014</center>
 
 |-
-| [[Image:Ionut.png]]
+| [[File:Ionut.png]]
 | <center>Ionut Georgescu</center>
 
 <center><br>[mailto:ionut.georgescu@kalon.ro ionut.georgescu@kalon.ro]<br>0725.692.204</center>
@@ -164,7 +164,7 @@
 | <center>14 Jul 2014</center>
 
 |-
-| [[Image:mm.jpg]]
+| [[File:mm.jpg]]
 | <center>Marius Marin</center>
 
 <center><br>[mailto:marius.marin@kalon.ro marius.marin@kalon.ro]<br>0720.333.085</center>
@@ -177,7 +177,7 @@
 | <center>04 Aug 2014</center>
 
 |-
-| [[Image:ana%20stoica.jpg]]
+| [[File:ana%20stoica.jpg]]
 | <center>Ana Maria Stoica</center>
 
 <center><br>[mailto:ana.stoica@kalon.ro ana.stoica@kalon.ro]<br>0721.463.560</center>
@@ -187,7 +187,7 @@
 | <center>18 Aug 2014</center>
 
 |-
-| [[Image:diana%20m.jpg]]
+| [[File:diana%20m.jpg]]
 | <center>Diana Mihai</center>
 
 <center><br>[mailto:diana.mihai@kalon.ro diana.mihai@kalon.ro]<br>0746.089.044</center>
@@ -200,7 +200,7 @@
 | <center>18 Aug 2014</center>
 
 |-
-| [[Image:valentin%20visan.jpg]]
+| [[File:valentin%20visan.jpg]]
 | <center>Valentin Visan</center>
 
 <center><br>[mailto:valentin.visan@kalon.ro valentin.visan@kalon.ro]<br>0724.008.087</center>
@@ -213,7 +213,7 @@
 | <center>18 Aug 2014</center>
 
 |-
-| [[Image:Matei.png]]
+| [[File:Matei.png]]
 | <center>Matei Trusca</center>
 
 <center><br>[mailto:matei.trusca@kalon.ro matei.trusca@kalon.ro]<br>0736.661.927</center>
@@ -223,7 +223,7 @@
 | <center>06 Aug 2014</center>
 
 |-
-| [[Image:dan%20c.jpg]]
+| [[File:dan%20c.jpg]]
 | <center>Dan Costenco</center>
 
 <center><br>[mailto:dan.costenco@kalon.ro dan.costenco@kalon.ro]<br>0724.294.047</center>
@@ -236,7 +236,7 @@
 | <center>27 Aug 2014</center>
 
 |-
-| [[Image:RaduIancu.jpg]]
+| [[File:RaduIancu.jpg]]
 | <center>Radu Florin Iancu</center>
 
 <center><br>[mailto:radu.iancu@kalon.ro radu.iancu@kalon.ro]<br>0724.001.035</center>
@@ -246,7 +246,7 @@
 | <center>22 Sep 2014</center>
 
 |-
-| [[Image:maria.png.jpg]]
+| [[File:maria.png.jpg]]
 | <center>Maria Nita</center>
 
 <center><br>[mailto:maria.nita@kalon.ro maria.nita@kalon.ro]<br>0727.180.443</center>
@@ -256,7 +256,7 @@
 | <center>09 Jan 2015</center>
 
 |-
-| [[Image:ciprian.jpg]]
+| [[File:ciprian.jpg]]
 | <center>Ciprian Simion</center>
 
 <center><br>[mailto:ciprian.simion@kalon.ro ciprian.simion@kalon.ro]<br>0727.389.702</center>
@@ -272,7 +272,7 @@
 | colspan="6"  style="background-color:#e0f0ff;border:0.05pt solid #dddddd;padding-top:0.185cm;padding-bottom:0.185cm;padding-left:0.265cm;padding-right:0.265cm;"| <center>'''Frontend Development'''</center>
 
 |-
-| [[Image:armin.jpg]]
+| [[File:armin.jpg]]
 | <center>Armin Rosu</center>
 
 <center><br>[mailto:armin.rosu@kalon.ro armin.rosu@kalon.ro]<br>0770.418.866</center>
@@ -282,7 +282,7 @@
 | <center>07 Jan 2014</center>
 
 |-
-| [[Image:Iulian.png]]
+| [[File:Iulian.png]]
 | <center>Iulian Pobleanu</center>
 
 <center><br>[mailto:iulian.pobleanu@kalon.ro iulian.pobleanu@kalon.ro]<br>0768.402.603</center>
@@ -292,7 +292,7 @@
 | <center>16 Jun 2014</center>
 
 |-
-| [[Image:valeriuuuuuu.jpg]]
+| [[File:valeriuuuuuu.jpg]]
 | <center>Valeriu Cucu</center>
 
 <center><br>[mailto:valeriu.cucu@kalon.ro valeriu.cucu@kalon.ro]<br>0720.266.630</center>
@@ -302,7 +302,7 @@
 | <center>28 Jul 2014</center>
 
 |-
-| [[Image:adrian%20olaru.jpg]]
+| [[File:adrian%20olaru.jpg]]
 | <center>Adrian Olaru</center>
 
 <center><br>[mailto:adrian.olaru@kalon.ro adrian.olaru@kalon.ro]<br>0752.181.086</center>
@@ -315,7 +315,7 @@
 | <center>01 Sep 2014</center>
 
 |-
-| [[Image:adi%20gheorghe.png]]
+| [[File:adi%20gheorghe.png]]
 | <center>Adrian Gheorghe</center>
 
 <center><br>[mailto:adrian.gheorghe@kalon.ro adrian.gheorghe@kalon.ro]<br>0721.378.195</center>
@@ -325,7 +325,7 @@
 | <center>16 Oct 2014</center>
 
 |-
-| [[Image:marian%20cojoc%20%20%20.jpg]]
+| [[File:marian%20cojoc%20%20%20.jpg]]
 | <center>Marian Cojoc</center>
 
 <center><br>[mailto:marian.cojoc@kalon.ro marian.cojoc@kalon.ro]<br>0743.143.936</center>
@@ -335,7 +335,7 @@
 | <center>29 Oct 2014</center>
 
 |-
-| [[Image:vali%20tureac.jpg]]
+| [[File:vali%20tureac.jpg]]
 | <center>Valentin Tureac</center>
 
 <center><br>[mailto:valentin.tureac@kalon.ro valentin.tureac@kalon.ro]<br>0720.254.955</center>
@@ -345,7 +345,7 @@
 | <center>26 Nov 2014</center>
 
 |-
-| [[Image:mihail%20subtirelu.jpg]]
+| [[File:mihail%20subtirelu.jpg]]
 | <center>Mihail Subtirelu</center>
 
 <center><br>[mailto:mihail.subtirelu@kalon.ro mihail.subtirelu@kalon.ro]<br>0762.277.372</center>
@@ -355,7 +355,7 @@
 | <center>17 Nov 2014</center>
 
 |-
-| [[Image:gabriel%20totoliciu.jpg]]
+| [[File:gabriel%20totoliciu.jpg]]
 | <center>Gabriel Totoliciu</center>
 
 <center><br>[mailto:gabriel.totliciu@kalon.ro gabriel.totliciu@kalon.ro]<br>0747.224.991</center>
@@ -368,7 +368,7 @@
 | <center>08 Dec 2014</center>
 
 |-
-| [[Image:mihnea%20belcin.jpg]]
+| [[File:mihnea%20belcin.jpg]]
 | <center>Mihnea Belcin</center>
 
 <center><br>[mailto:mihnea.belcin@kalon.ro mihnea.belcin@kalon.ro]<br>0722.288.973</center>
@@ -378,7 +378,7 @@
 | <center>08 Dec 2014</center>
 
 |-
-| [[Image:20150302_1411071.jpg]]
+| [[File:20150302_1411071.jpg]]
 | <center>Sabin Tudor</center>
 
 <center><br>[mailto:sabin.tudor@kalon.ro sabin.tudor@kalon.ro]<br>0748.896.737</center>
@@ -388,7 +388,7 @@
 | <center>02 Mar 2015</center>
 
 |-
-| [[Image:radu%20ppp.jpg]]
+| [[File:radu%20ppp.jpg]]
 | <center>Radu Paraschiv</center>
 
 <center><br>[mailto:radu.paraschiv@kalon.ro radu.paraschiv@kalon.ro]<br>0749.981.220</center>
@@ -404,7 +404,7 @@
 | colspan="6"  style="background-color:#e0f0ff;border:0.05pt solid #dddddd;padding-top:0.185cm;padding-bottom:0.185cm;padding-left:0.265cm;padding-right:0.265cm;"| <center>'''User Experience'''</center>
 
 |-
-| [[Image:David-Iftime.png]]
+| [[File:David-Iftime.png]]
 | <center>David Iftime[mailto:david.iftime@kalon.ro david.iftime@kalon.ro]<br>0729.729.739</center>
 
 
@@ -415,7 +415,7 @@
 | <center>07 Jan 2014</center>
 
 |-
-| [[Image:cosmin%20neagu.jpg]]
+| [[File:cosmin%20neagu.jpg]]
 | <center>Cosmin Neagu</center>
 
 <center><br>[mailto:cosmin.neagu@kalon.ro cosmin.neagu@kalon.ro]<br></center>
@@ -425,7 +425,7 @@
 | <center>18 Aug 2014</center>
 
 |-
-| [[Image:Nicu.png]]
+| [[File:Nicu.png]]
 | <center>Nicolae Balan<br>[mailto:nicolae.balan@kalon.ro nicolae.balan@kalon.ro]<br>0741.070.937</center>
 | <center>15 Jan 1985</center>
 | <center>Visual Designer</center>
@@ -433,7 +433,7 @@
 | <center>07 Apr 2014</center>
 
 |-
-| [[Image:Florin.png]]
+| [[File:Florin.png]]
 | <center>Florin Totea<br>[mailto:florin.totea@kalon.ro<br> florin.totea@kalon.ro]<br></center>
 
 <center>0723.577.200</center>
@@ -449,7 +449,7 @@
 | <center>14 Apr 2014</center>
 
 |-
-| [[Image:Mela.png]]
+| [[File:Mela.png]]
 | <center>Melania Lupu<br>[mailto:melania.lupu@kalon.ro<br> melania.lupu@kalon.ro]<br>0726.653.735</center>
 
 
@@ -460,7 +460,7 @@
 | <center>28 Apr 2014</center>
 
 |-
-| [[Image:Stefan-M.png]]
+| [[File:Stefan-M.png]]
 | <center>Stefan Mandache<br>[mailto:stefan.mandache@kalon.ro<br> stefan.mandache@kalon.ro]<br>0740.271.736</center>
 | <center>14 Jul 1982</center>
 | <center>Senior Technical Writer</center>
@@ -468,7 +468,7 @@
 | <center>21 May 2014</center>
 
 |-
-| [[Image:IMG_0932_oana.png]]
+| [[File:IMG_0932_oana.png]]
 | <center>Oana Secara<br>[mailto:oana.secara@kalon.ro oana.secara@kalon.ro]<br>0723.180.997</center>
 | <center>17 Feb 1986</center>
 | <center>UX Designer</center>
@@ -476,7 +476,7 @@
 | <center>14 Jul 2014</center>
 
 |-
-| [[Image:vlad.jpg]]
+| [[File:vlad.jpg]]
 | <center>Vlad Paloiu</center>
 
 <center><br>[mailto:vlad.paloiu@kalon.ro vlad.paloiu@kalon.ro]<br>0753.220.133</center>
@@ -486,7 +486,7 @@
 | <center>25 Aug 2014</center>
 
 |-
-| [[Image:ovidiu.jpg]]
+| [[File:ovidiu.jpg]]
 | <center>Ovidiu Boc</center>
 
 <center><br>[mailto:ovidiu.boc@kalon.ro ovidiu.boc@kalon.ro]<br>0723.199.907</center>
@@ -496,7 +496,7 @@
 | <center>10 Sep 2014</center>
 
 |-
-| [[Image:alex%20oda.jpg]]
+| [[File:alex%20oda.jpg]]
 | <center>Alexandru Oda</center>
 
 <center><br>[mailto:alex.oda@kalon.ro alex.oda@kalon.ro]<br>0730.667.665</center>
@@ -506,7 +506,7 @@
 | <center>15 Sep 2014</center>
 
 |-
-| [[Image:adrian%20stoian.jpg]]
+| [[File:adrian%20stoian.jpg]]
 | <center>Adrian Stoian</center>
 
 <center><br>[mailto:adrian.stoian@kalon.ro adrian.stoian@kalon.ro]<br>0729.742.742</center>
@@ -516,7 +516,7 @@
 | <center>16 Sep 2014</center>
 
 |-
-| [[Image:poza_Adrian_Grajdeanu.png]]
+| [[File:poza_Adrian_Grajdeanu.png]]
 | <center>Adrian Grajdeanu</center>
 
 <center><br>[mailto:adrian.grajdeanu@kalon.ro adrian.grajdeanu@kalon.ro]<br>0726.716.268</center>
@@ -526,7 +526,7 @@
 | <center>29 Sep 2014</center>
 
 |-
-| [[Image:mihaiii%20raiciu.jpg]]
+| [[File:mihaiii%20raiciu.jpg]]
 | <center>Mihai Raiciu</center>
 
 <center><br>[mailto:mihai.raiciu@kalon.ro mihai.raiciu@kalon.ro]<br>0766.405.521</center>
@@ -539,7 +539,7 @@
 | <center>29 Sep 2014</center>
 
 |-
-| [[Image:Doru%20animatoru.jpg]]
+| [[File:Doru%20animatoru.jpg]]
 | <center>Doru Dorneanu</center>
 
 <center><br>[mailto:doru.dorneanu@kalon.ro doru.dorneanu@kalon.ro]<br>0746.120.279</center>
@@ -549,7 +549,7 @@
 | <center>14 Oct 2014</center>
 
 |-
-| [[Image:Dan.png]]
+| [[File:Dan.png]]
 | <center>Dan Nistor</center>
 
 <center><br>[mailto:dan.nistor@kalon.ro dan.nistor@kalon.ro]<br>0723.713.969</center>
@@ -559,7 +559,7 @@
 | <center>27 Oct 2014</center>
 
 |-
-| [[Image:liviu%20maxim.jpg]]
+| [[File:liviu%20maxim.jpg]]
 | <center>Liviu Maxim</center>
 
 <center><br>[mailto:liviu.maxim@kalon.ro liviu.maxim@kalon.ro]<br>0757.486.733</center>
@@ -569,7 +569,7 @@
 | <center>08 Dec 2014</center>
 
 |-
-| [[Image:radu%20mocanu%20mic.jpg]]
+| [[File:radu%20mocanu%20mic.jpg]]
 | <center>Radu Mocanu</center>
 
 <center><br>[mailto:radu.mocanu@kalon.ro radu.mocanu@kalon.ro]<br>0766.601.601</center>
@@ -585,7 +585,7 @@
 | colspan="6"  style="background-color:#e0f0ff;border:0.05pt solid #dddddd;padding-top:0.185cm;padding-bottom:0.185cm;padding-left:0.265cm;padding-right:0.265cm;"| <center>'''Quality Assurance'''</center>
 
 |-
-| [[Image:Adrian-Stoica.png]]
+| [[File:Adrian-Stoica.png]]
 | <center>Adrian Stoica</center>
 
 <center><br>[mailto:adrian.stoica@kalon.ro adrian.stoica@kalon.ro]<br>0729.940.011</center>
@@ -595,7 +595,7 @@
 | <center>28 Apr 2014</center>
 
 |-
-| [[Image:Silviu-S.png]]
+| [[File:Silviu-S.png]]
 | <center>Silviu Stan</center>
 
 <center><br>[mailto:silviu.stan@kalon.ro silviu.stan@kalon.ro]<br>0727.569.714</center>
@@ -608,7 +608,7 @@
 | <center>16 Jun 2014</center>
 
 |-
-| [[Image:Mihai-S.png]]
+| [[File:Mihai-S.png]]
 | <center>Mihai Sora</center>
 
 <center><br>[mailto:mihai.sora@kalon.ro mihai.sora@kalon.ro]<br>0766 492 328</center>
@@ -621,7 +621,7 @@
 | <center>30 Jun 2014</center>
 
 |-
-| [[Image:Stefan-T.png]]
+| [[File:Stefan-T.png]]
 | <center>Stefan Tihan</center>
 
 <center><br>[mailto:stefan.tihan@kalon.ro stefan.tihan@kalon.ro]<br>0747.414.577</center>
@@ -631,7 +631,7 @@
 | <center>21 Jul 2014</center>
 
 |-
-| [[Image:0e468d7.jpg]]
+| [[File:0e468d7.jpg]]
 | <center>Ovidiu Curcuta</center>
 
 <center><br>[mailto:ovidiu.curcuta@kalon.ro ovidiu.curcuta@kalon.ro]<br>0737.364.442</center>
@@ -641,7 +641,7 @@
 | <center>11 Aug 2014</center>
 
 |-
-| [[Image:2100b68.jpg]]
+| [[File:2100b68.jpg]]
 | <center>Alexandru Rusu</center>
 
 <center><br>[mailto:alexandru.rusu@kalon.ro alexandru.rusu@kalon.ro]<br>0732.458.470</center>
@@ -651,7 +651,7 @@
 | <center>03 Nov 2014</center>
 
 |-
-| [[Image:andrei%20leica.jpg]]
+| [[File:andrei%20leica.jpg]]
 | <center>Andrei Leica</center>
 
 <center><br>[mailto:andrei.leica@kalon.ro andrei.leica@kalon.ro]<br>0740.122.081</center>
@@ -661,7 +661,7 @@
 | <center>17 Nov 2014</center>
 
 |-
-| [[Image:talmaci.jpg]]
+| [[File:talmaci.jpg]]
 | <center>Alexandru Talmaci</center>
 
 <center><br>[mailto:alexandru.talmaci@kalon.ro alexandru.talmaci@kalon.ro]<br>0745.757.338</center>
@@ -674,7 +674,7 @@
 | colspan="6"  style="background-color:#e0f0ff;border:0.05pt solid #dddddd;padding-top:0.185cm;padding-bottom:0.185cm;padding-left:0.265cm;padding-right:0.265cm;"| <center>'''Operations'''</center>
 
 |-
-| [[Image:Marius-Militaru.png]]
+| [[File:Marius-Militaru.png]]
 | <center>Marius Militaru</center>
 
 <center><br>[mailto:marius.militaru@kalon.ro marius.militaru@kalon.ro]<br>0722.623.166</center>
@@ -684,7 +684,7 @@
 | <center>03 Mar 2014</center>
 
 |-
-| [[Image:Simo.png]]
+| [[File:Simo.png]]
 | <center>Simona Meltzer</center>
 
 <center><br>[mailto:simona.meltzer@kalon.ro simona.meltzer@kalon.ro]<br>0722.466.666</center>
@@ -697,7 +697,7 @@
 | <center>24 Mar 2014</center>
 
 |-
-| [[Image:Flori.png]]
+| [[File:Flori.png]]
 | <center>Florentina Stanciu<br>[mailto:florentina.stanciu@kalon.ro florentina.stanciu@kalon.ro]<br>0741.545.908</center>
 | <center>27 Jul 1989</center>
 | <center>Office and HR Support</center>
@@ -705,7 +705,7 @@
 | <center>01 Apr 2014</center>
 
 |-
-| [[Image:Gabriela.png]]
+| [[File:Gabriela.png]]
 | <center>Gabriela Dan</center>
 
 <center><br>[mailto:gabriela.dan@kalon.ro gabriela.dan@kalon.ro]<br>0756.121.412</center>
@@ -715,7 +715,7 @@
 | 
 
 |-
-| [[Image:FullSizeRender.jpg]]
+| [[File:FullSizeRender.jpg]]
 | <center>Alexandra Calina</center>
 
 <center><br>[mailto:alexandra.calina@kalon.ro alexandra.calina@kalon.ro]<br>0755.391.459</center>
