--- a/team.mediawiki
+++ b/team.mediawiki
@@ -13,7 +13,7 @@
 | colspan="6"  style="background-color:#e0f0ff;border:0.05pt solid #dddddd;padding-top:0.185cm;padding-bottom:0.185cm;padding-left:0.265cm;padding-right:0.265cm;"| <center>'''CEO'''</center>
 
 |-
-| [[https://raw.github.com/stefanmandache/tst/master/images/Mike.png]]
+| [[File:Mike.png]]
 | <center>Michael Koch</center>
 
 <center><br>[mailto:michael.koch@kalon.ro michael.koch@kalon.ro]<br>+1-917-566-0450</center>
